# vortex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  debug_range.py  fmcw_range_doppler.py  print_samples.py  profile_perf.sh  run.sh  teaching.md  test_radar_simulator
build-perf/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-perf/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-perf/src/: CTestTestfile.cmake  Makefile  Vortex  cmake_install.cmake
build-perf/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  vortex_test_double_buffer_spsc  vortex_test_iir_filter  vortex_test_linear_system  vortex_test_lp_butterworth  vortex_test_ring_buffer
docs/: car_tracking_algorithm_reference.md  simulator_implementation_reference.md
lib/: CMakeLists.txt  dynamics.cpp  dynamics.h  environment.cpp  environment.h  plan.md  probe.h  probe_element.h  problem_description.h  receiver_noise_model.h  simulation.cpp  simulation.h  target_echo_model.h  target_observation.h  tx_history_buffer.h
lib/utils/: BoundedQueue.h  DoubleBufferSPSC.h  FastLinearSystem.h  IIRFilter.h  LPButterworthCoeff.h  LinearSystem.h  RingBuffer.h  coords.h  dsp_config.h
src/: CMakeLists.txt  fmcw_tracker.cpp  fmcw_tracker.h  main.cpp  radar_algo.cpp  radar_algo.h
tests/: CMakeLists.txt  test_harness.h  vortex_test_double_buffer_spsc.cpp  vortex_test_iir_filter.cpp  vortex_test_linear_system.cpp  vortex_test_lp_butterworth.cpp  vortex_test_ring_buffer.cpp  vortex_test_wav_writer.cpp
tools/: fmcw_car_tracker.py  plot_radar_results.py
